--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100&text=Strongbox" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
+    <link href="https://unpkg.com/ionicons@4.1.2/dist/css/ionicons.min.css" rel="stylesheet">
 </head>
 <body>
 
