--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
                 </div>
             </div>
         </div>
+        <div class="bootStatus">
+            <span class="message"></span>
+        </div>
     </div>
 
     <app-strongbox style="display: none;"></app-strongbox>
